--- a/.github/workflows/maven_ci.yml
+++ b/.github/workflows/maven_ci.yml
@@ -29,3 +29,9 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn clean test -DsuiteXmlFile=testng.xml -DbrowserMode=headless
+
+    - name: archive artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: sparkHTML
+        path: ./test-output/testReport.html
