--- a/.github/workflows/maven_ci.yml
+++ b/.github/workflows/maven_ci.yml
@@ -27,11 +27,13 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
+
     - name: Build with Maven
       run: mvn clean test -DsuiteXmlFile=testng.xml -DbrowserMode=headless
 
     - name: archive artifact
       uses: actions/upload-artifact@v4
+      if: always()
       with:
         name: SparkHTML
         path: ./test-output/
