--- a/.github/workflows/maven_ci.yml
+++ b/.github/workflows/maven_ci.yml
@@ -9,6 +9,8 @@
 name: Run Selenium Test with Maven
 
 on:
+  workflow_dispatch:
+    #Workflow_dispatch allows to run test manually from github actions
   push:
     branches: [ "main" ]
   pull_request:
