--- a/.github/workflows/nightly_test_run.yml
+++ b/.github/workflows/nightly_test_run.yml
@@ -9,12 +9,8 @@
 name: Run Selenium Test with Maven
 
 on:
-  workflow_dispatch:
-    #Workflow_dispatch allows to run test manually from github actions
-  push:
-    branches: [ "main" ]
-  pull_request:
-    types: [ opened, edited, reopened, review_requested ]
+  schedule:
+    - cron: "*/5 * * * *"
 
 jobs:
   build:
