Updated cron job

--- a/.github/workflows/nightly_test_run.yml
+++ b/.github/workflows/nightly_test_run.yml
@@ -6,11 +6,11 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Run Selenium Test with Maven
+name: Run Selenium Test Nightly
 
 on:
   schedule:
-    - cron: "*/5 * * * *"
+    - cron: "0 0 * * *"
 
 jobs:
   build:
